fix footer, fix mobile scrollbar

--- a/src/components/landingEnd/landingEnd.module.scss
+++ b/src/components/landingEnd/landingEnd.module.scss
@@ -19,8 +19,9 @@ $lnColor: #1a8bf3;
     #2f81fb 15.1%,
     rgba(255, 255, 255, 0.92) 100%
   );
-  height: 170vh;
+  height: 110vh;
   width: 100vw;
+  overflow: hidden;
 
   @include mobile() {
     height: 240vh;
@@ -28,10 +29,11 @@ $lnColor: #1a8bf3;
 }
 
 .gradientContainer {
-  height: 170vh;
+  height: 110vh;
   width: 100vw;
   position: absolute;
   z-index: 1;
+  overflow: hidden;
 
   -webkit-clip-path: polygon(
     100% 53%,
