--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,10 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
+  width: 100vw;
+  position: relative;
+  overflow-x: hidden;
 
   a {
     color: inherit;
